--- a/articles/azure-functions/durable/TOC.yml
+++ b/articles/azure-functions/durable/TOC.yml
@@ -13,12 +13,15 @@
 - name: クイックスタート
   expanded: true
   items:
-    - name: '持続的な関数の作成 - C#'
+    - name: 持続的な関数の作成 - C#
       href: durable-functions-create-first-csharp.md
       displayName: 'get started, chaining'
     - name: 持続的な関数の作成 - JavaScript
       displayName: 'get started, chaining'
       href: quickstart-js-vscode.md
+    - name: 持続的な関数の作成 - Python
+      displayName: 'get started, chaining'
+      href: quickstart-python-vscode.md
 - name: チュートリアル
   items:
     - name: 関数チェーン
@@ -76,7 +79,7 @@
 - name: リファレンス
   items:
     - name: host.json 設定
-      href: 'durable-functions-bindings.md#host-json'
+      href: durable-functions-bindings.md#host-json
     - name: バインド
       href: durable-functions-bindings.md
     - name: HTTP API
