--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -40,9 +40,11 @@
       items:
         - name: Azure Digital Twins CLI を使用する
           href: how-to-use-cli.md
-        - name: Azure Digital Twins インスタンスを作成する
-          href: how-to-set-up-instance.md
-        - name: クライアント アプリケーションを認証する
+        - name: インスタンスと認証を設定する (スクリプト化)
+          href: how-to-set-up-instance-scripted.md
+        - name: インスタンスと認証を設定する (手動)
+          href: how-to-set-up-instance-manual.md
+        - name: アプリ認証コードを作成する
           href: how-to-authenticate-client.md
     - name: モデルを設計する
       items:
@@ -50,6 +52,8 @@
           href: how-to-manage-model.md
         - name: モデルを解析および検証する
           href: how-to-use-parser.md
+        - name: タグを追加する
+          href: how-to-use-tags.md
     - name: ライブ実行環境を使用する
       items:
         - name: デジタル ツインを管理する
@@ -72,11 +76,17 @@
           href: how-to-manage-routes.md
         - name: Azure Maps と統合する
           href: how-to-integrate-maps.md
+        - name: Azure Time Series Insights と統合する
+          href: how-to-integrate-time-series-insights.md
     - name: トラブルシューティング
       items:
         - name: 既知の問題
           href: troubleshoot-known-issues.md
-- name: リファレンス
+        - name: 問題解決
+          items:
+            - name: 403 (許可されていません)
+              href: troubleshoot-error-403.md
+- name: Reference
   items:
     - name: Digital Twins サービスに関する制約
       href: reference-service-limits.md
@@ -145,7 +155,7 @@
         - name: Azure Digital Twins サンプル
           href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-samples/digital-twins-samples/'
         - name: Azure Digital Twins エクスプローラー (サンプル)
-          href: 'https://github.com/Azure-Samples/digital-twins-explorer'
+          href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-explorer/digital-twins-explorer/'
         - name: DTDL 検証ツール (サンプル)
           href: 'https://docs.microsoft.com/samples/azure-samples/dtdl-validator/dtdl-validator/'
     - name: Azure ツール
